2010-01-25  Darin Fisher  <darin@chromium.org>

        Reviewed by Brady Eidson.

        Chains of history items representing same-document navigation need to
        always remember that association

        https://bugs.webkit.org/show_bug.cgi?id=33224

        * fast/loader/stateobjects/document-destroyed-navigate-back-expected.txt:
        * fast/loader/stateobjects/document-destroyed-navigate-back.html: Revised
        test results to match corrected behavior.  Also removed the redundant
        history.back() call, which helps make the test a bit easier to understand.

2010-01-26  Chris Fleizach  <cfleizach@apple.com>

        One more attempt to get GTK version to pass.

        Add ability for image maps to be focused via tabbing
        https://bugs.webkit.org/show_bug.cgi?id=17513

        * fast/events/tab-imagemap-expected.txt:
        * fast/events/tab-imagemap.html:

2010-01-26  Chris Fleizach  <cfleizach@apple.com>

        Unreviewed.

        Attempt to make this test pass on GTK.

        Add ability for image maps to be focused via tabbing
        https://bugs.webkit.org/show_bug.cgi?id=17513

        * fast/events/tab-imagemap.html:

2010-01-26  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Add ability for image maps to be focused via tabbing
        https://bugs.webkit.org/show_bug.cgi?id=17513

        * fast/events/resources/tabindex-focus-blur-all.js:
        (test):
        (testProgrammaticFocus):
        * fast/events/tab-imagemap-expected.txt: Added.
        * fast/events/tab-imagemap.html: Added.
        * fast/events/tabindex-focus-blur-all-expected.txt:

2010-01-26  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Holger Freyther.

        REGRESSION(r53835): Fix editing/pasteboard/paste-noscript-xhtml.xhtml
        https://bugs.webkit.org/show_bug.cgi?id=34157

        Add Qt specific result for this test that differs from the cross-platform